<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dip" >
        <!-- View Title Label -->
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dip"
            android:text="@string/title_activity_profile"
            android:textSize="25sp"
            android:textStyle="bold" />
        		
        <!-- Title Part -->
		<LinearLayout
        	android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:orientation="horizontal">
	        <EditText
	            android:id="@+id/titleAddStory"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:hint="@string/enterTitle"
	            android:textSize="20sp" />	  
	                        
		</LinearLayout>
		
		<!-- Image Part -->
		<LinearLayout
        	android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:orientation="horizontal">	 
	        <EditText
	            android:id="@+id/imageAddStory"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:hint="@string/uploadImage"
	            android:textSize="20sp"/>	              
		</LinearLayout>
		
		<!-- Story Part -->
		<LinearLayout
        	android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:orientation="horizontal">
	        <EditText
	            android:id="@+id/storyAddStory"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:hint="@string/enterStory"
	            android:textSize="20sp" />	          
		</LinearLayout>
		
		<!-- Place Part -->
  		<LinearLayout
        	android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:orientation="horizontal">
	         <EditText
	            android:id="@+id/placeAddStory"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:hint="@string/pickPlace"
	            android:textSize="20sp" />	             
		</LinearLayout>
		
  		<!-- Time Part -->
		<LinearLayout
        	android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:orientation="horizontal">
	        <EditText
	            android:id="@+id/timeAddStory"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:hint="@string/pickTime"
	            android:textSize="20sp"/>          
		</LinearLayout>
		
		<!-- Error message -->
        <TextView
            android:id="@+id/errorProfile"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dip"
            android:textColor="#e30000"
            android:textStyle="bold" />
        
		<!-- Add Story button -->
        <Button
            android:id="@+id/btnAddStory"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:background="#ff6347"
            android:onClick="saveUser"
            android:text="@string/btnAddStory"
            android:textColor="#fff" />
        
    </LinearLayout>

</ScrollView>