<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

   <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dip" >
        
		<!-- View Title Label -->
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dip"
            android:text="@string/title_activity_forgotpwd"
            android:textSize="25sp"
            android:textStyle="bold" />
        
		 <!-- Email Label -->
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/email" />
        
        <!-- Email TextField -->
        <EditText
            android:id="@+id/emailForgotpwd"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enterEmail"
            android:inputType="textEmailAddress" />
 
		<!-- Error message -->
        <TextView
            android:id="@+id/errorForgotpwd"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dip"
            android:textColor="#e30000"
            android:textStyle="bold" />
        
		<!-- Reset Password button -->
        <Button
            android:id="@+id/btnResetPwdForgotpwd"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:background="#ff6347"
            android:onClick="resetPassword"
            android:text="@string/btnResetPwd"
            android:textColor="#fff" />
        
    </LinearLayout>

</ScrollView>