<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dip" >
        
		<!-- View Title Label -->
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dip"
            android:text="@string/title_activity_search"
            android:textSize="25sp"
            android:textStyle="bold" />
        
		<!-- User Search Label -->		
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/enterUserTags" />
        
		<!-- User Search TextField -->
        <AutoCompleteTextView 
            android:id="@+id/searchUserTags"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"/>
        
		<!-- Place Search Label -->		
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/enterPlaceTags" />
        
		<!-- Place Search TextField -->
		<MultiAutoCompleteTextView  
            android:id="@+id/searchPlaceTags"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:completionThreshold="1"/>
        
		<!-- Story Search Label -->		
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/enterStoryTags" />
        
		<!-- Story Search TextField -->
        <MultiAutoCompleteTextView  
            android:id="@+id/searchStoryTags"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:completionThreshold="1"/>
  
		<!-- Error message -->
        <TextView
            android:id="@+id/errorSearch"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dip"
            android:textColor="#e30000"
            android:textStyle="bold" />
        
		<!-- Search button -->
        <Button
            android:id="@+id/btnSearch"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:background="#ff6347"
            android:onClick="searchAction"
            android:text="@string/btnSearch"
            android:textColor="#fff" />


        
    </LinearLayout>

</ScrollView>